Add elasticsearch url as environment variable

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,3 +21,5 @@ services:
         build: .
         depends_on: 
             - elasticsearch
+        environment:
+            - "ELASTICSEARCH_URL=http://elasticsearch:9200"
